[project]
name = "langgraph-slack"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.1",
    "langchain>=1.0.3",
    "langchain-google-genai>=3.0.1",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
    "fastapi>=0.115.6",
    "langgraph-sdk>=0.1.48",
    "langmem>=0.0.15",
    "slack-bolt>=1.22.0",
    "uvicorn>=0.34.0",
    "langgraph-prebuilt>=0.1.2",
    "aiohttp>=3.11.13",
]

[project.packages]
find = { where = ["src"] }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "langgraph-api>=0.0.28",
    "langgraph-cli>=0.1.75",
]
